<resources>
    <string name="app_name">TaskMaster</string>
    <string name="all_tasks">All Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="total_tasks">Total tasks:</string>
    <string name="task_description">Task Description</string>
    <string name="task_title">Task title</string>
    <string name="do_somthing">Do somthing</string>
    <string name="my_task">My Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">SignIn</string>
    <string name="not_registered_yet">Not Registered Yet ?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_signIn">SignUp</string>
    <string name="username">UserName</string>
    <string name="useremail">UserEmail</string>
    <string name="userpassword">UserPassword</string>
    <string name="signup">SignUp</string>
    <string name="enter_your_confirmation_code">Enter your Confirmation Code</string>
    <string name="code">Code</string>
    <string name="confirm">Confirm</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="sign_in_page">Sign In Page</string>
    <string name="log_out">Log Out</string>
    <string name="channel_name">TaskMaster</string>
    <string name="channel_description">Notifications For New Task</string>

</resources>